fixed busted footer copytext + fixed wrap div not scaling to the height of the page - footer padding. pending swapping image logo & ftp which is the bigger one since that's a bit less static

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -160,6 +160,7 @@ body {
 
 .wrap {
   max-width: var(--maxw);
+  min-height: calc(100vh - 24px);
   margin: 0 auto;
   padding: 24px;
 }
@@ -332,9 +333,9 @@ footer {
   right: 0;
   bottom: 0;
   background: var(--bg);
-  padding: 12px 0;
+  padding: 24px 0;
   box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.04);
-  margin: 32px 0 12px;
+  margin: 32px 0 0;
   text-align: center;
 }
 
